// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`buildEvalPrompt > renders the all with spawns prompt 1`] = `
{
  "description": "Run one step of code in a persistent kernel.

<instruction>
**One eval call = one cell = one logical step.** Top-level names persist per language across eval calls, tool calls and \`task\` subagents: define helpers and clients once and reuse them instead of re-importing or re-reading. Rebuild state only after \`reset\`, a kernel restart, or a \`NameError\`/\`ReferenceError\`, and check a sentinel variable first so a re-run cannot duplicate side effects.

Batch a step's independent calls in one cell with \`parallel(thunks)\`.
- Write real code around the calls - loops, branches, joins, a try/except per risky item - and keep every failed or missing item in the result verbatim; re-read truncated output before deciding.

\`language\`: \`"py"\` IPython kernel, \`"js"\` persistent JavaScript VM, \`"rb"\` persistent Ruby kernel, \`"jl"\` persistent Julia kernel.

A cell that outlives the foreground window detaches: it keeps its language kernel busy (another language can continue) and completes as one notification with its value or error and buffered output. Do not re-run a detached cell; read or cancel it with \`eval({ action: "peek", cell_id })\` / \`eval({ action: "stop", cell_id })\`.

Python runs on a live event loop: use top-level \`await\`; \`asyncio.run(…)\` raises.
JS runs under Node.js worker: top-level \`await\`/\`return\` work; \`fetch\`/\`Buffer\` available.
Ruby: synchronous; helper options are keyword args (e.g. \`output("id", limit: 2)\`); the last expression auto-displays unless it is \`nil\`, an assignment, or a definition (like IRB).
Julia: synchronous; helper options are standard keyword args (e.g. \`output("id", limit=2)\`); the last expression auto-displays unless it is an assignment or a definition (like the Julia REPL).
On error, fix and re-run only the failing step; a normal error keeps state, while a timeout or stop message says whether the kernel restarted.
</instruction>

<prelude>
Same helpers + arg order, both runtimes. Python: sync, options = trailing kwargs. JS: async/\`await\`able, options = ONE trailing object literal, never positional (extras throw). Ruby: sync, options = trailing keyword args. Julia: sync, options = trailing keyword args.
\`\`\`
display(value) → None
    Cell output. Images reach you only through display: pass a figure, image bytes, a tool result, or its \`images[i]\`.
print(value, ...) → None
    Text output.
read(path, offset?=1, limit?=None) → str
    File as text; offset/limit are 1-indexed lines. Accepts \`local://…\`.
write(path, content) → str
    Write file (creates parents) → resolved path. \`local://…\` persists across turns/subagents.
env(key?=None, value?=None) → str | None | dict
    No args → full env dict; one → value; two → set \`key=value\`.
output(*ids, format?="raw", offset?=None, limit?=None) → str | dict | list[dict]
    Task/agent output by id. Reads immediately: running tasks return their status; \`format\` \`"raw"\` = full, \`"tail"\` = trailing.
tool.<name>(args) → { text, images?, details?, hasError? }
    Invoke any session tool; image results (e.g. \`tool.read\` on a png) arrive in \`images[i]\` as { mimeType, dataBase64 }.
tool_schema(name?) → dict
    Parameter schema of a tool (omit \`name\` to list tool names); a failed \`tool.<name>()\` call also returns the expected parameters.
completion(prompt, model?="default", system?=None, schema?=None) → str | dict
    Oneshot, stateless. \`model\`: \`"smol"\` fast | \`"default"\` session | \`"slow"\` most capable. \`schema\` (JSON-Schema) → parsed structured output.
agent(prompt, agent?="task", model?=None, label?=None, schema?=None, handle?=False) → str | dict
    Run a subagent → final output. \`agent\` picks a discovered agent. \`schema\` as in completion(). \`handle\` → workflow node { text, output, handle: \`agent://<id>\`, id, agent } (parsed under \`data\` with \`schema\`).
parallel(thunks) → list
    Thunks through a bounded pool (as wide as a \`task\` batch), input order kept; a throwing thunk propagates.
pipeline(items, ...stages) → list
    Map items through one-arg stages with a barrier between stages; each stage receives the previous stage's result.
log(message) → None
    Progress line above the status tree.
phase(title) → None
    Phase grouping subsequent status lines.
\`\`\`
</prelude>

<workflow>
Multi-agent work is an acyclic graph in code: one \`agent(…)\` node per step with its handle option (\`handle=True\` / \`{ handle: true }\` / \`handle=true\`), \`parallel(thunks)\` for independent nodes, \`pipeline(items, *stages)\` for staged waves. Pass an upstream node's \`handle\` or \`output\` (or a \`write("local://…")\` URI for bulk text) into dependents instead of re-inlining transcripts, and wrap risky nodes in try/except so a failure aborts only its subtree.
</workflow>",
  "promptGuidelines": [
    "Prefer eval when a step's calls are independent: one cell runs them together and keeps every failure in its result; edits and result-dependent calls go one at a time, each observed before the next.",
    "Use eval reset only when a language kernel must be wiped; reset is scoped to the selected language.",
  ],
  "promptSnippet": "Run one incremental code cell in a persistent language kernel.",
}
`;

exports[`buildEvalPrompt > renders the js without spawns prompt 1`] = `
{
  "description": "Run one step of code in a persistent kernel.

<instruction>
**One eval call = one cell = one logical step.** Top-level names persist per language across eval calls and tool calls: define helpers and clients once and reuse them instead of re-importing or re-reading. Rebuild state only after \`reset\`, a kernel restart, or a \`NameError\`/\`ReferenceError\`, and check a sentinel variable first so a re-run cannot duplicate side effects.

Batch a step's independent calls in one cell with \`parallel(thunks)\`.
- Write real code around the calls - loops, branches, joins, a try/except per risky item - and keep every failed or missing item in the result verbatim; re-read truncated output before deciding.

\`language\`: \`"js"\` persistent JavaScript VM.

A cell that outlives the foreground window detaches: it keeps its language kernel busy (another language can continue) and completes as one notification with its value or error and buffered output. Do not re-run a detached cell; read or cancel it with \`eval({ action: "peek", cell_id })\` / \`eval({ action: "stop", cell_id })\`.

JS runs under Node.js worker: top-level \`await\`/\`return\` work; \`fetch\`/\`Buffer\` available.

On error, fix and re-run only the failing step; a normal error keeps state, while a timeout or stop message says whether the kernel restarted.
</instruction>

<prelude>
Async/\`await\`able; options = ONE trailing object literal, never positional (extras throw).
\`\`\`
display(value) → None
    Cell output. Images reach you only through display: pass a figure, image bytes, a tool result, or its \`images[i]\`.
print(value, ...) → None
    Text output.
read(path, offset?=1, limit?=None) → str
    File as text; offset/limit are 1-indexed lines. Accepts \`local://…\`.
write(path, content) → str
    Write file (creates parents) → resolved path. \`local://…\` persists across turns/subagents.
env(key?=None, value?=None) → str | None | dict
    No args → full env dict; one → value; two → set \`key=value\`.
tool.<name>(args) → { text, images?, details?, hasError? }
    Invoke any session tool; image results (e.g. \`tool.read\` on a png) arrive in \`images[i]\` as { mimeType, dataBase64 }.
tool_schema(name?) → dict
    Parameter schema of a tool (omit \`name\` to list tool names); a failed \`tool.<name>()\` call also returns the expected parameters.
completion(prompt, model?="default", system?=None, schema?=None) → str | dict
    Oneshot, stateless. \`model\`: \`"smol"\` fast | \`"default"\` session | \`"slow"\` most capable. \`schema\` (JSON-Schema) → parsed structured output.
parallel(thunks) → list
    Thunks through a bounded pool (as wide as a \`task\` batch), input order kept; a throwing thunk propagates.
pipeline(items, ...stages) → list
    Map items through one-arg stages with a barrier between stages; each stage receives the previous stage's result.
log(message) → None
    Progress line above the status tree.
phase(title) → None
    Phase grouping subsequent status lines.
\`\`\`
</prelude>",
  "promptGuidelines": [
    "Prefer eval when a step's calls are independent: one cell runs them together and keeps every failure in its result; edits and result-dependent calls go one at a time, each observed before the next.",
    "Use eval reset only when a language kernel must be wiped; reset is scoped to the selected language.",
  ],
  "promptSnippet": "Run one incremental code cell in a persistent language kernel.",
}
`;

exports[`buildEvalPrompt > renders the js-py without spawns prompt 1`] = `
{
  "description": "Run one step of code in a persistent kernel.

<instruction>
**One eval call = one cell = one logical step.** Top-level names persist per language across eval calls and tool calls: define helpers and clients once and reuse them instead of re-importing or re-reading. Rebuild state only after \`reset\`, a kernel restart, or a \`NameError\`/\`ReferenceError\`, and check a sentinel variable first so a re-run cannot duplicate side effects.

Batch a step's independent calls in one cell with \`parallel(thunks)\`.
- Write real code around the calls - loops, branches, joins, a try/except per risky item - and keep every failed or missing item in the result verbatim; re-read truncated output before deciding.

\`language\`: \`"py"\` IPython kernel, \`"js"\` persistent JavaScript VM.

A cell that outlives the foreground window detaches: it keeps its language kernel busy (another language can continue) and completes as one notification with its value or error and buffered output. Do not re-run a detached cell; read or cancel it with \`eval({ action: "peek", cell_id })\` / \`eval({ action: "stop", cell_id })\`.

Python runs on a live event loop: use top-level \`await\`; \`asyncio.run(…)\` raises.
JS runs under Node.js worker: top-level \`await\`/\`return\` work; \`fetch\`/\`Buffer\` available.

On error, fix and re-run only the failing step; a normal error keeps state, while a timeout or stop message says whether the kernel restarted.
</instruction>

<prelude>
Same helpers + arg order, both runtimes. Python: sync, options = trailing kwargs. JS: async/\`await\`able, options = ONE trailing object literal, never positional (extras throw).
\`\`\`
display(value) → None
    Cell output. Images reach you only through display: pass a figure, image bytes, a tool result, or its \`images[i]\`.
print(value, ...) → None
    Text output.
read(path, offset?=1, limit?=None) → str
    File as text; offset/limit are 1-indexed lines. Accepts \`local://…\`.
write(path, content) → str
    Write file (creates parents) → resolved path. \`local://…\` persists across turns/subagents.
env(key?=None, value?=None) → str | None | dict
    No args → full env dict; one → value; two → set \`key=value\`.
tool.<name>(args) → { text, images?, details?, hasError? }
    Invoke any session tool; image results (e.g. \`tool.read\` on a png) arrive in \`images[i]\` as { mimeType, dataBase64 }.
tool_schema(name?) → dict
    Parameter schema of a tool (omit \`name\` to list tool names); a failed \`tool.<name>()\` call also returns the expected parameters.
completion(prompt, model?="default", system?=None, schema?=None) → str | dict
    Oneshot, stateless. \`model\`: \`"smol"\` fast | \`"default"\` session | \`"slow"\` most capable. \`schema\` (JSON-Schema) → parsed structured output.
parallel(thunks) → list
    Thunks through a bounded pool (as wide as a \`task\` batch), input order kept; a throwing thunk propagates.
pipeline(items, ...stages) → list
    Map items through one-arg stages with a barrier between stages; each stage receives the previous stage's result.
log(message) → None
    Progress line above the status tree.
phase(title) → None
    Phase grouping subsequent status lines.
\`\`\`
</prelude>",
  "promptGuidelines": [
    "Prefer eval when a step's calls are independent: one cell runs them together and keeps every failure in its result; edits and result-dependent calls go one at a time, each observed before the next.",
    "Use eval reset only when a language kernel must be wiped; reset is scoped to the selected language.",
  ],
  "promptSnippet": "Run one incremental code cell in a persistent language kernel.",
}
`;
